spacing fixed in agile component for mobile screen size

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1957,7 +1957,7 @@ align-items: center;
   /* Agile */
 
   .agile-desc-text {
-    padding-top: 80px;
+    padding-top: 100px;
     color: #ececee;
     text-align: center;
     font-size: 16px;
